# SFMLGame

./: .gitignore  Animation.h  Arrow.cpp  Arrow.h  ArrowPool.cpp  ArrowPool.h  AudioManager.cpp  AudioManager.h  Background.cpp  Background.h  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Coin.cpp  Coin.h  CoinBar.cpp  CoinBar.h  Collectible.cpp  Collectible.h  CollectibleManager.cpp  CollectibleManager.h  Eagle.cpp  Eagle.h  Enemy.cpp  Enemy.h  EnemyArrow.cpp  EnemyArrow.h  EnemyManager.cpp  EnemyManager.h  GameManager.cpp  GameManager.h  GameState.h  GridTile.h  HealthBar.cpp  HealthBar.h  Level.cpp  Level.h  Level_TileBased.cpp  Level_TileBased.h  (+35 more)
src/camera/: Camera.cpp
src/collectibles/: Collectible.cpp  Collectible.h
src/collectibles/coins/: Coin.cpp  Coin.h
src/core/: GameManager.cpp  GameManager.h
src/enemies/: Enemy.h
src/enemies/eagle/: Eagle.cpp  Eagle.h
src/enemies/enemyarrow/: EnemyArrow.cpp  EnemyArrow.h
src/enemies/enemyarrow/projectiles/: Arrow.cpp  ArrowPool.cpp  ArrowPool.h
src/graphics/: Background.cpp  TextureLoader.cpp
src/level/: Level.cpp  Level.h  Tile.h
src/managers/: AudioManager.cpp  AudioManager.h  CollectibleManager.cpp  CollectibleManager.h  EnemyManager.cpp  EnemyManager.h  ObstacleManager.cpp  ObstacleManager.h  RespawnManager.cpp  RespawnManager.h
src/obstacles/: Obstacle.cpp  Obstacle.h
src/player/: Player.cpp  Player.h
src/player/projectiles/: Projectile.cpp  Projectile.h  ProjectilePool.cpp  ProjectilePool.h
src/ui/: CoinBar.cpp  CoinBar.h  HealthBar.cpp  HealthBar.h  ProjectileBar.cpp  ProjectileBar.h
src/ui/menu/: Button.h  Menu.cpp  Menu.h  WinScreen.cpp  WinScreen.h
src/utilities/: Math.cpp  Math.h  Utilities.cpp  Utilities.h
